--- a/s/base.html
+++ b/s/base.html
@@ -46,6 +46,11 @@
 </head>
 <body>
   <div class="main">
+    <div class="pure-g">
+      <div class="pure-u-1">
+        <p>test</p>
+      </div>
+    </div>
   </div>
 </body>
 </html>
