--- a/s/base.html
+++ b/s/base.html
@@ -46,8 +46,15 @@
 </head>
 <body>
   <div class="main">
+    <nav class="pure-g">
+      <a class="pure-u-1-3" href="#">home</a>
+      <a class="pure-u-1-3" href="#">blog</a>
+      <a class="pure-u-1-3" href="#">projects</a>
+    </nav>
+
     <div class="pure-g">
-      <div class="pure-u-1">
+      <img class="pure-u-1 pure-u-md-1-3" src="https://anime-girls-holding-programming-books.netlify.app/static/de50ab96ebd3bb4272f73d4d053f50eb/dd8b2/Murakami_Shiina_Holding_Computer_C_Programming_Language.png">
+      <div class="pure-u-1 pure-u-md-2-3">
         <p>test</p>
       </div>
     </div>
