--- a/s/base.html
+++ b/s/base.html
@@ -53,8 +53,8 @@
     </nav>
 
     <div class="pure-g">
-      <img class="pure-u-1 pure-u-md-1-3" src="https://anime-girls-holding-programming-books.netlify.app/static/de50ab96ebd3bb4272f73d4d053f50eb/dd8b2/Murakami_Shiina_Holding_Computer_C_Programming_Language.png">
-      <div class="pure-u-1 pure-u-md-2-3">
+      <img class="pure-img pure-u-1 pure-u-md-2-5" src="anime_c.png">
+      <div class="pure-u-1 pure-u-md-3-5">
         <p>test</p>
       </div>
     </div>
