--- a/s/base.html
+++ b/s/base.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-  <title>Claresies</title>
+  <title>Claresies time :3</title>
   <meta name="description" content="Claresies time :3">
   <meta name="author" content="Clare">
   <link rel="icon" type="image/x-icon" href="/s/favicon.png">
@@ -58,7 +58,7 @@
     <div class="pure-g">
       <img class="pure-img pure-u-1 pure-u-md-2-5" src="anime_c.png">
       <div class="pure-u-1 pure-u-md-3-5">
-        <p>test</p>
+        <p>Hi my name is Clare I like computers :]</p>
       </div>
     </div>
   </div>
