--- a/postsHTML/test.html
+++ b/postsHTML/test.html
@@ -1,4 +1,14 @@
-<html>
+<hr>
+<h2>title: Claresies!
+Date: 2025-07-09</h2>
+<h1>hi hello</h1>
+<p>good morning my dear lady
+fancy a cup of tea?</p><html>
   balah blah blah
-  Claresies!
+  <hr>
+<h2>title: Claresies!
+Date: 2025-07-09</h2>
+<h1>hi hello</h1>
+<p>good morning my dear lady
+fancy a cup of tea?</p>
 </html>
