--- a/s/test.html
+++ b/s/test.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="/s/main.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/grids-responsive-min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,8 +50,8 @@
 <body>
   <div class="main">
     <nav class="pure-g">
-      <a class="pure-u-1-3" href="#">home</a>
-      <a class="pure-u-1-3" href="#">blog</a>
+      <a class="pure-u-1-3" href="index.html">home</a>
+      <a class="pure-u-1-3" href="posts.html">blog</a>
       <a class="pure-u-1-3" href="#">projects</a>
     </nav>
 
